unpackaged/main/default/objects/Customer_Note__c/Customer_Note__c.object-meta.xml
<CustomObject>
    <label>Customer Note</label>
    <nameField>
        <label>Customer Note Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>