unpackaged/main/default/objects/Customer_Note__c/fields/Create_Methdod__c.field-meta.xml
<CustomField>
    <fullName>Create_Methdod__c</fullName>
    <label>Create Methdod</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>