unpackaged/main/default/objects/Customer_Note__c/fields/Implementation__c.field-meta.xml
<CustomField>
    <fullName>Implementation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Implementation</label>
    <referenceTo>Implementation__c</referenceTo>
    <relationshipLabel>Customer Notes</relationshipLabel>
    <relationshipName>Customer_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>