unpackaged/main/default/objects/Customer_Note__c/fields/Submitted_By_Department__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By_Department__c</fullName>
    <label>Submitted By Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Department</valueSetName>
    </valueSet>
</CustomField>