unpackaged/main/default/objects/Customer_Note__c/fields/Submitted_By_Territory__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By_Territory__c</fullName>
    <label>Submitted By Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Territory</valueSetName>
    </valueSet>
</CustomField>